# rainbow

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
cmake/: shader.hpp.in  shaders.cmake
include/: application.hpp  buffer.hpp  camera.hpp  intersection.hpp  octree.hpp  program.hpp  scene.hpp  texture.hpp  timing.hpp
include/rainbow/: application.hpp  camera.hpp  constants.hpp  data_structures.hpp  integral_range.hpp  intersection.hpp  octree.hpp  parallel.hpp  photon_map.hpp  random.hpp  rendering_backend.hpp  sampling.hpp  scene.hpp  thread_pool.hpp  vector.hpp  viewport.hpp
include/rainbow/backends/cpu/: cpu_backend.hpp
include/rainbow/backends/metal/: metal_backend.hpp
include/rainbow/backends/opengl/: buffer.hpp  opengl.hpp  opengl_backend.hpp  program.hpp  texture.hpp
include/rainbow/backends/vulkan/: error.hpp  vulkan.hpp  vulkan_backend.hpp
shaders/: fullscreen_quad.frag  fullscreen_quad.vert  test.comp
src/: application.cpp  buffer.cpp  camera.cpp  constants.cpp  data_structures.cpp  integral_range.cpp  intersection.cpp  main.cpp  octree.cpp  opengl.cpp  parallel.cpp  photon_map.cpp  program.cpp  random.cpp  rendering_backend.cpp  sampling.cpp  scene.cpp  texture.cpp  thread_pool.cpp  timing.cpp  vector.cpp  viewport.cpp
src/backends/cpu/: cpu_backend.cpp
src/backends/metal/: library.metal  metal_backend.hh  metal_backend.mm  parameters.hh
src/backends/opengl/: buffer.cpp  opengl.cpp  opengl_backend.cpp  program.cpp  texture.cpp  view_rays.comp
src/backends/vulkan/: error.cpp  vulkan.cpp  vulkan_backend.cpp
